[package]
edition = "2021"
name = "deej-oled"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
embassy-embedded-hal = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", rev = "cefdbfa" }
embassy-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", rev = "cefdbfa", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", rev = "cefdbfa", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "cefdbfa", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
