[package]
edition = "2021"
name = "deej-oled"
version = "0.1.0"
license = "MIT"
publish = false

[dependencies]
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3", features = [
    "defmt",
] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
embassy-embedded-hal = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3" }
embassy-rp = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-executor = { version = "0.9.1", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3", features = [
    "defmt",
] }
embassy-usb-logger = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", rev = "e2a2bd3" }
log = "0.4"
adc-mcp3008 = { version = "0.1.1", git = "https://github.com/thecodechemist99/adc-mcp3008" }
fugit = "0.3.7"
embedded-graphics = "0.8.1"
ssd1322_rs = "0.2.0"
assign-resources = "0.5"
heapless = "0.8.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
critical-section = "1.2.0"
static_cell = { version = "2.1" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
